--- a/Cypress/package.json
+++ b/Cypress/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "cypressautomation",
+  "name": "cypress_project",
   "version": "1.0.0",
-  "description": "Cypress Automation",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress open",
-    "cypress:open": "cypress open"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Varsha Saini",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
-    "cypress": "^13.17.0",
-    "cypress-file-upload": "^5.0.8",
+    "cypress": "^14.5.1",
     "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-real-events": "^1.14.0",
+    "cypress-wait-until": "^3.0.2",
     "cypress-xpath": "^2.0.1",
     "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0",
+    "mochawesome-merge": "^5.0.0",
     "mochawesome-report-generator": "^6.2.0"
-  },
-  "dependencies": {
-    "@faker-js/faker": "^9.7.0",
-    "dayjs": "^1.11.13",
-    "moment": "^2.30.1",
-    "xhr2": "^0.2.1",
-    "xlsx": "^0.18.5",
-    "xmlbuilder": "^15.1.1"
   }
 }
